@@ -90,6 +90,7 @@
                     <productVersion>${jira.version}</productVersion>
                     <productDataVersion>${jira.data.version}</productDataVersion>
                     <productDataPath>${project.basedir}/src/test/resources/generated-test-resources.zip</productDataPath>
+                    <jvmArgs>-Xmx768m -XX:MaxPermSize=356m</jvmArgs>
                     <pluginArtifacts>
                         <pluginArtifact>
                             <groupId>com.atlassian.jira.tests</groupId>
